declaring the css folder as static for express.

--- a/Training_6_socketio/index.html
+++ b/Training_6_socketio/index.html
@@ -25,12 +25,11 @@
 </script>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="codeSchoolChat.css">
-    <title>Chat room with socket io</title>
+    <link rel="stylesheet" href="codeSchoolChat.css" type="text/css">
+    <title>Chat room with socket io lala</title>
 </head>
 <body>
-<h1>Hello from Chattr</h1>
+<h1>Hello from Chattr lala</h1>
 <div id="chat_div">
     <form id="chat_form" action="">
         <div id="user_list_div">
